--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
-    "mysql": "^2.18.1"
+    "mysql2": "^3.12.0"
   }
 }
